Project

General

Profile

Actions

Bug #17655

closed

multisite: possible infinite loop in RGWFetchAllMetaCR

Added by Casey Bodley over 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

unit tests in https://github.com/ceph/ceph/pull/11585 exposed a possible infinite loop due to break statements within a yield. if any of these breaks are executed, RGWFetchAllMetaCR::operate() will be executed repeatedly without making progress


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19321: jewel: multisite: possible infinite loop in RGWFetchAllMetaCRResolvedAlexey SheplyakovActions
Copied to rgw - Backport #19322: kraken: multisite: possible infinite loop in RGWFetchAllMetaCRResolvedAlexey SheplyakovActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Yehuda Sadeh over 7 years ago

  • Assignee set to Yehuda Sadeh
Actions #3

Updated by Casey Bodley about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from jewel to jewel kraken
Actions #4

Updated by Alexey Sheplyakov about 7 years ago

  • Copied to Backport #19321: jewel: multisite: possible infinite loop in RGWFetchAllMetaCR added
Actions #5

Updated by Alexey Sheplyakov about 7 years ago

  • Copied to Backport #19322: kraken: multisite: possible infinite loop in RGWFetchAllMetaCR added
Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF