rgw: fix break inside of yield in RGWFetchAllMetaCR

the yield macro is implemented with for/switch, so the breaks in
RGWFetchAllMetaCR weren't being applied to the for loop as expected -
so any of these breaks send RGWFetchAllMetaCR into an infinite loop

removed the yield {} block, so that breaks will apply to the for loop as
intended, then added a single yield; statement to allow the
entries_index consumer to run one per iteration

Fixes: http://tracker.ceph.com/issues/17655

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 190bd385a7be52867d65740c410884f5c8cbc21f)